--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,12 +29,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B clean package
-    - uses: "marvinpinto/action-automatic-releases@latest"
-      with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
-          files: |
-            LICENSE.txt
-            *.jar
+      
+    - name: Test upload
+      run: git add .
+    - run: git commit -m "Hiasd" 
+    - run: git push origin master
