--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,8 +29,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B clean package
-      
-    - name: Test upload
-      run: git add .
+     
+    - run: git config --global user.email "fiat70998@gmail.com"
+     
+    - run: git add .
     - run: git commit -m "Hiasd" 
     - run: git push origin master
