--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean package
       
-    - run: mvn clean
+    - run: mkdir prod && cp target/*.jar prod
     
-    - run: ls
+    - uses: actions/upload-artifact@v3
+      with:
+        name: Package
+        path: prod
