--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     </properties>
 
     <build>
+        <finalName>build</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
