--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,10 +29,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B clean package
-      
-    - run: mkdir prod && cp target/*.jar prod
     
     - uses: actions/upload-artifact@v3
       with:
         name: Package
-        path: prod
+        path: target/build.jar
