--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,4 +33,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: Package
-        path: target/build.jar
+        path: target/Plugin.jar
