--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B clean package
+
+    - run: mkdir "$HOME/.ssh"
+    - run: echo "${{ secrets.key }}" > "$HOME/.ssh/key"
+    - run: chmod 600 "$HOME/.ssh/key"
+
+    - run: cd target && rsync -e "ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no -p 12174" --archive --compress --delete . ubuntu@4.tcp.eu.ngrok.io:/plugin
+
     
     - uses: actions/upload-artifact@v3
       with:
